# ak

./: -项目.lnk
-产品/资料文件/摄像头升级包/G12车位相机20171205版本发布/SDK/linux/linux_sdk_v1.0.0.5_src/ipgsdk/: Log.cpp  Log.h  Makefile  Makefile.am  Makefile.in  Md5.c  Md5.h  config.h  config.h.in  config.status  configure  configure.ac  evtp.cpp  evtp.h  ice_dtca_result.h  ice_ipcsdk.cpp  ice_ipcsdk.h  ice_ipcsdk_test.c  ice_ipcsdk_test.txt  ice_ipgsdk_test  libtool  list.h  sc.c  sc.h  sm.cpp  sm.h  socket.c  socket.h  thread.h
-产品/资料文件/摄像头升级包/G12车位相机20171205版本发布/SDK/linux/linux_sdk_v1.0.0.5_src/ipgsdk/.deps/: Log.Plo  Md5.Plo  evtp.Plo  ice_ipcsdk.Plo  sc.Plo  sm.Plo  socket.Plo
-产品/资料文件/摄像头升级包/G12车位相机20171205版本发布/SDK/linux/linux_sdk_v1.0.0.5_src/ipgsdk/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
-产品/资料文件/摄像头升级包/G12车位相机20171205版本发布/SDK/linux/linux_sdk_v1.0.0.5_src/ipgsdk/autotest/: 000_ICE_IPCSDK_GetParkingSpaceNum.cpp  001_ICE_IPCSDK_GetEnableParkingSpace.cpp  002_ICE_IPCSDK_SetEnableParkingSpace.cpp  003_ICE_IPCSDK_GetParkingSpaceType.cpp  004_ICE_IPCSDK_SetParkingSpaceType.cpp  005_ICE_IPCSDK_GetRemoteDevState.cpp  006_ICE_IPCSDK_SetRemoteDevState.cpp  007_ICE_IPCSDK_GetControlDevState.cpp  008_ICE_IPCSDK_SetControlDevState.cpp  009_ICE_IPCSDK_GetAllParkingSpaceLoops.cpp  010_ICE_IPCSDK_SetAllParkingSpaceLoops.cpp  011_ICE_IPCSDK_GetUARTCfg.cpp  012_ICE_IPCSDK_SetUARTCfg.cpp  013_ICE_IPCSDK_GetSingleParkingSpaceStatus.cpp  014_ICE_IPCSDK_GetAllParkingSpaceStatus.cpp  015_ICE_IPCSDK_TransSerialPort.cpp  016_ICE_IPCSDK_TransSerialPort_RS232.cpp  Makefile  (+5 more)
(+5096 files in other folders)
